<resources>
    <string name="app_name">Team Placeholder</string>
    <string name="title_activity_products_listing">Products</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="text_view_landing_welcome">Team Placeholder</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_cost">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_product_save">Saving Product…</string>
    <string name="alert_dialog_product_delete">Deleting Product…</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="intent_create_employee">intent_create_employee</string>
    <string name="create_employee_welcome">Create new employee.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="create_new_employee">Create new employee</string>
    <string name="login">Log In</string>
    <string name="employee_id">Employee ID</string>
    <string name="login_password">Password</string>
    <string name="sign_in_message">Welcome! Please log in.</string>
    <string name="welcome_message_HomeScreen">Make some SALES!!!!</string>
    <string name="start_Trans">Start Transaction</string>
    <string name="product_report">Sales Report: Product</string>
    <string name="cashier_report">Sales Report: Cashier</string>
    <string name="logout">Log Out</string>
    <string name="alert_dialog_employee_create_success">Employee Created!</string>
    <string name="alert_dialog_employee_create_failure">Unable to Create…</string>
    <string name="alert_dialog_employee_create">Creating…</string>
    <string name="validation_first_name">First Name cannot be blank</string>
    <string name="validation_last_name">Last Name cannot be blank</string>
    <string name="validation_password">Password cannot be blank</string>
    <string name="home">Home</string>
    <string name="alert_dialog_logging_in">Logging you in...</string>
    <string name="alert_dialog_no_employees_title">No Employees Exist</string>
    <string name="alert_dialog_no_employees">Please create your first Employee</string>
    <string name="alert_dialog_login_success">Logged In.</string>
    <string name="alert_dialog_login_failure">ID or Password is incorrect.</string>
    <string name="intent_login_employee">intent_login_employee</string>
    <string name="employee_active">active</string>
    <string name="current_employee">current_employee</string>
    <string name="menu_item1">Fruit</string>
    <string name="menu_item2">Protein</string>
    <string name="menu_item3">Gear</string>
    <string name="menu_item4">Gift Card</string>
    <string name="product_name">Lookup Code</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">CHECKOUT</string>
    <string name="clear">CLEAR</string>
    <string name="shopping_cart_welcome">Shopping Cart</string>
    <string name="view_cart">VIEW CART</string>
    <string name="keep_shopping">KEEP SHOPPING</string>
    <string name="home_icon">Home</string>
    <string name="Welcome_text">Welcome </string>
    <string name="item_added_to_cart">Item Added</string>
    <string name="OK">OK</string>
    <string name="alert_checkout_failed">Checkout Failed!</string>
    <string name="alert_transaction_complete">Transaction Complete!</string>
    <string name="alert_dialog_checking_out">Checking out...</string>
    <string name="shopping_cart_total">Cart Total:</string>

</resources>