<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_landing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uark.uarkregisterapp.LandingActivity">

    <TextView
        android:id="@+id/welcome_message_HomeScreen"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message_HomeScreen"
        android:textSize="26sp" />

    <!--Button design for Start Transaction-->
    <Button
        android:id="@+id/start_trans_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/welcome_message_HomeScreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="112dp"
        android:onClick="startTransactionOnClick"
        android:text="@string/start_Trans" />

    <!--Button design for Create New Employee-->
    <Button
        android:id="@+id/create_employee_Home_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/start_trans_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="112dp"
        android:onClick="createNewEmployeeButton"
        android:text="@string/create_new_employee" />

    <!--Button Design for Product Sales Report-->
    <Button
        android:id="@+id/sales_report_Product_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/create_employee_Home_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="112dp"
        android:onClick="salesReportProductOnClick"
        android:text="@string/product_report" />

    //Button design for Cashier Sales Report
    <Button
        android:id="@+id/sales_report_Cashier_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/sales_report_Product_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="112dp"
        android:onClick="salesReportCashierOnClick"
        android:text="@string/cashier_report" />

    <!--Button design for Log Out-->
    <Button
        android:id="@+id/LogOut_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/sales_report_Cashier_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="112dp"
        android:onClick="logOutOnClick"
        android:text="@string/logout" />

</RelativeLayout>