<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:id="@+id/content_shopping_cart_listing"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="edu.uark.uarkregisterapp.ShoppingCartActivity"
tools:showIn="@layout/activity_shopping_cart">


<TextView
    android:id="@+id/shopping_cart_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/shopping_cart_welcome"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_view_shopping_cart"
        android:layout_width="360dp"
        android:layout_height="250dp"
        android:layout_below="@+id/shopping_cart_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" />

<Button
    android:id="@+id/checkout"
    android:layout_width="136dp"
    android:layout_height="50dp"
    android:layout_below="@+id/list_view_shopping_cart"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="20dp"
    android:onClick="checkout"
    android:text="@string/checkout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/list_view_shopping_cart" />

<Button
    android:id="@+id/clear"
    android:layout_width="136dp"
    android:layout_height="50dp"
    android:layout_below="@+id/list_view_shopping_cart"
    android:layout_alignParentStart="true"
    android:layout_marginStart="30dp"
    android:onClick="clearCart"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:layout_marginTop="20dp"
    android:text="@string/clear"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/list_view_shopping_cart" />

<Button
    android:id="@+id/keep_shopping"
    android:layout_width="136dp"
    android:layout_height="50dp"
    android:layout_below="@+id/clear"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="30dp"
    android:onClick="keepShopping"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:layout_marginTop="20dp"
    android:text="@string/keep_shopping"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/list_view_shopping_cart" />

    <TextView
        android:id="@+id/cart_total"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view_shopping_cart"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:text="@string/shopping_cart_total" />

    <TextView
        android:id="@+id/total_view"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/checkout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp" />

</RelativeLayout>
