<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_products_listing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.ProductsListingActivity"
    tools:showIn="@layout/activity_products_listing">

<EditText
    android:id="@+id/search_product_field"
    android:layout_width="236dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="21dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/product_name"
    android:inputType="textAutoComplete"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/search_product_button"
    android:layout_width="270dp"
    android:layout_height="50dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="2dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_toRightOf="@+id/search_product_field"
    android:onClick="searchProducts"
    android:text="@string/search"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/search_product_field" />

    <ListView
        android:id="@+id/list_view_products"
        android:layout_width="362dp"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="17dp"
        app:layout_constraintTop_toBottomOf="@+id/search_product_field" />

<Button
    android:id="@+id/view_cart_button"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:layout_below="@+id/list_view_products"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:layout_alignParentRight="true"
    android:onClick="viewCart"
    android:text="@string/view_cart"
    app:layout_constraintTop_toBottomOf="@+id/list_view_products" />

</RelativeLayout>
